# lame_engine

./: .gitignore  CMakeLists.txt
include/: ECSManager.h
include/components/: Position.h
include/systems/: System.h
src/: ECSManager.cpp  ECSManager.h  main.cpp
src/components/: Position.h  Sprite.h
src/entities/: Entity.h
